--- a/ceeq/apps/queries/templates/projects/project_new.html
+++ b/ceeq/apps/queries/templates/projects/project_new.html
@@ -119,7 +119,7 @@
                     <input id="project_new" class="btn btn-primary" type="submit" value="Create New Project">
                 </div>
                 <div class="col-md-2">
-                    <a href="{% url 'q_projects' %}" class="btn btn-default" style="width: 100%;">Cancel</a>
+                    <a href="{% url 'queries:projects' %}" class="btn btn-default" style="width: 100%;">Cancel</a>
                 </div>
             </div>
         </form>
