--- a/ceeq/apps/queries/templates/projects/projects_start.html
+++ b/ceeq/apps/queries/templates/projects/projects_start.html
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="tab-content">
             <div class="tab-pane" id="projects">
-                {% include 'q_projects/projects.html' %}
+                {% include 'projects/projects.html' %}
             </div>
 
             <div class="tab-pane" id="score_overall">
@@ -34,6 +34,6 @@
 
 {% block footer %}
     <script>
-        {% include 'q_projects/project.js' %}
+        {% include 'projects/project.js' %}
     </script>
 {% endblock %}
