--- a/ceeq/apps/usage/templates/usage/usage.html
+++ b/ceeq/apps/usage/templates/usage/usage.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'core/base.html' %}
 
 {% block title %} Home {% endblock %}
 
@@ -15,6 +15,6 @@
 
 {% block footer %}
     <script>
-        {% include 'usage.js' %}
+        {% include 'usage/usage.js' %}
     </script>
 {% endblock %}
