--- a/ceeq/apps/users/templates/users/home.html
+++ b/ceeq/apps/users/templates/users/home.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'core/base.html' %}
 
 {% block title %} Home {% endblock %}
 
@@ -20,6 +20,6 @@
 
 {% block footer %}
     <script>
-        {% include 'home.js' %}
+        {% include 'users/home.js' %}
     </script>
 {% endblock %}
