--- a/ceeq/apps/projects/templates/defects_density/projects_dd_start.html
+++ b/ceeq/apps/projects/templates/defects_density/projects_dd_start.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "core/base.html" %}
 {% block title %} Projects Defects Density {% endblock %}
 
 {% block body %}
