--- a/ceeq/apps/queries/templates/queries/projects/projects_start.html
+++ b/ceeq/apps/queries/templates/queries/projects/projects_start.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "core/base.html" %}
 {% block title %} Projects {% endblock %}
 
 {% block subnav %}
@@ -16,15 +16,15 @@
     <div class="container">
         <div class="tab-content">
             <div class="tab-pane" id="projects">
-                {% include 'projects/projects.html' %}
+                {% include 'queries/projects/projects.html' %}
             </div>
 
             <div class="tab-pane" id="score_overall">
-                {% include 'q_score_overall.html' %}
+                {% include 'queries/score_overall.html' %}
             </div>
 
             <div class="tab-pane" id="framework_parameter">
-                {% include 'q_framework_parameter.html' %}
+                {% include 'queries/framework_parameter.html' %}
             </div>
 
         </div>
@@ -34,6 +34,6 @@
 
 {% block footer %}
     <script>
-        {% include 'projects/project.js' %}
+        {% include 'queries/projects/project.js' %}
     </script>
 {% endblock %}
