app template directory update for old apps projects/defect_density

--- a/ceeq/apps/projects/templates/proj/projects/projects.html
+++ b/ceeq/apps/projects/templates/proj/projects/projects.html
@@ -12,10 +12,10 @@
                 <div class="col-md-8">
                     <small>
                         {% if superuser %}
-                            <i class="fa fa-pencil fa=lg"></i> Create a <a href="{% url 'project_new' %}"> New Project </a> &nbsp; | &nbsp;
+                            <i class="fa fa-pencil fa=lg"></i> Create a <a href="{% url 'projects:project_new' %}"> New Project </a> &nbsp; | &nbsp;
                         {% endif %}
-                        <i class="fa fa-cloud-upload fa-lg"></i><a href="{% url 'defects_density_log' 1000000 %}" id="dd_log_all"> Log All DDs</a> &nbsp; | &nbsp;
-                        <i class="fa fa-refresh fa-lg"></i><a href="{% url 'project_update_scores' 1000000 %}" id="update_all"> Update All Scores</a>
+                        <i class="fa fa-cloud-upload fa-lg"></i><a href="{% url 'projects:defects_density_log' 1000000 %}" id="dd_log_all"> Log All DDs</a> &nbsp; | &nbsp;
+                        <i class="fa fa-refresh fa-lg"></i><a href="{% url 'projects:project_update_scores' 1000000 %}" id="update_all"> Update All Scores</a>
                     </small>
                 </div>
                 <div class="col-md-2">
@@ -38,7 +38,7 @@
                     <tbody>
                         {% for project in projects_active %}
                             <tr>
-                                <td><a href='{% url 'project_detail' project.id%}'>{{ project.name|truncatechars:20 }}</a></td>
+                                <td><a href='{% url 'projects:project_detail' project.id%}'>{{ project.name|truncatechars:20 }}</a></td>
                                 <td>
                                     {% if project.jira_version == 'All Versions' %}
                                         <a href="http://jira.west.com/issues/?jql=project = {{ project.jira_name }}" target="_blank">
@@ -53,13 +53,13 @@
                                     {% if project.score == 101 %}
                                         No created issues
                                     {% elif project.score == 102 %}
-                                        <a href="{% url 'project_defects_density' project.id %}">Out of Range</a>
+                                        <a href="{% url 'projects:project_defects_density' project.id %}">Out of Range</a>
                                     {% elif project.score == 103 %}
                                         {# No open issues#}
-                                        <a href="{% url 'project_defects_density' project.id %}"> 10.0</a>
+                                        <a href="{% url 'projects:project_defects_density' project.id %}"> 10.0</a>
                                         {% if superuser %}
                                             <i class="fa fa-indent"></i>
-                                            <a href="{% url 'defects_density_log' project.id %}" onclick="$('#throbber').show();"> Log</a>
+                                            <a href="{% url 'projects:defects_density_log' project.id %}" onclick="$('#throbber').show();"> Log</a>
                                         {% endif %}
 
                                     {% elif project.score == 104 %}
@@ -67,7 +67,7 @@
                                     {% elif project.score == 109 %}
                                         No evaluation
                                     {% else %}
-                                        <a href="{% url 'project_defects_density' project.id %}">
+                                        <a href="{% url 'projects:project_defects_density' project.id %}">
                                             {% if project.score < 0 %}
                                                 <font color="red">{{ project.score |floatformat:2 }}</font>
                                             {% else %}
@@ -76,11 +76,11 @@
                                         </a>
                                         {% if superuser %}
                                             <i class="fa fa-indent"></i>
-                                            <a href="{% url 'defects_density_log' project.id %}" onclick="$('#throbber').show();"> Log</a>
+                                            <a href="{% url 'projects:defects_density_log' project.id %}" onclick="$('#throbber').show();"> Log</a>
                                         {% endif %}
                                     {% endif %}
                                 </td>
-                                <td><a href="{% url 'project_update_scores' project.id %}"
+                                <td><a href="{% url 'projects:project_update_scores' project.id %}"
                                        id="update_single_{{ project.id }}" onclick="$('#throbber').show();"
                                        style="color: green; padding-left: 25%; cursor: pointer; cursor: hand;"><i class="fa fa-refresh"></i></a> </td>
                             </tr>
@@ -89,7 +89,7 @@
                 </table>
             </div>
         {% else %}
-        <small><i class="fa fa-pencil"></i> Create a <a href="{% url 'project_new' %}"> New Project </a>
+        <small><i class="fa fa-pencil"></i> Create a <a href="{% url 'projects:project_new' %}"> New Project </a>
         </small>
         <p>No projects available</p>
         {% endif %}
@@ -115,7 +115,7 @@
                     <tbody>
                         {% for project in projects_archive %}
                             <tr>
-                                <td><a href='{% url 'project_detail' project.id%}'>{{ project.name|truncatechars:20 }}</a></td>
+                                <td><a href='{% url 'projects:project_detail' project.id%}'>{{ project.name|truncatechars:20 }}</a></td>
                                 <td>
                                     {% if project.jira_version == 'All Versions' %}
                                         <a href="http://jira.west.com/issues/?jql=project = {{ project.jira_name }}" target="_blank">
@@ -130,16 +130,16 @@
                                     {% if project.score == 101 %}
                                         No created issues
                                     {% elif project.score == 102 %}
-                                        <a href="{% url 'project_defects_density' project.id %}">Out of Range</a>
+                                        <a href="{% url 'projects:project_defects_density' project.id %}">Out of Range</a>
                                     {% elif project.score == 103 %}
-                                        <a href="{% url 'project_defects_density' project.id %}"> No open issues</a>
+                                        <a href="{% url 'projects:project_defects_density' project.id %}"> No open issues</a>
 
                                     {% elif project.score == 104 %}
                                         No JIRA Data
                                     {% elif project.score == 109 %}
                                         No evaluation
                                     {% else %}
-                                        <a href="{% url 'project_defects_density' project.id %}">
+                                        <a href="{% url 'projects:project_defects_density' project.id %}">
                                             {% if project.score < 0 %}
                                                 <font color="red">{{ project.score |floatformat:2 }}</font>
                                             {% else %}
@@ -148,7 +148,7 @@
                                         </a>
                                         {% if superuser %}
                                             <i class="fa fa-indent"></i>
-                                            <a href="{% url 'defects_density_log' project.id %}" onclick="$('#throbber').show();"> Log</a>
+                                            <a href="{% url 'projects:defects_density_log' project.id %}" onclick="$('#throbber').show();"> Log</a>
                                         {% endif %}
                                     {% endif %}
                                 </td>
