--- a/ceeq/apps/core/templates/core/base.html
+++ b/ceeq/apps/core/templates/core/base.html
@@ -110,8 +110,8 @@
                         {% if user.is_staff %}
                             <li><a href="{% url 'usage:usage' %}"><i class="fa fa-table fa-fw"></i>Usage</a> </li>
                         {% endif %}
-{#                        <li><a href="{% url 'projects' %}"><i class="fa fa-bar-chart-o"></i> Projects</a> </li>#}
                         <li><a href="{% url 'help:guide' %}"><i class="fa fa-thumbs-o-up"></i> Help</a> </li>
+                        <li><a href="{% url 'projects:projects' %}"><i class="fa fa-bar-chart-o"></i> OldProjects</a> </li>
 
                     </ul>
 
