--- a/ceeq/apps/defects_density/templates/defects_density/dd_list_single.html
+++ b/ceeq/apps/defects_density/templates/defects_density/dd_list_single.html
@@ -51,8 +51,8 @@
                             <td class="col-sm-1" style="text-align: center">{{ dd.application|floatformat:3 }}</td>
                             <td class="col-sm-1" style="text-align: center">{{ dd.voice_slots|floatformat:3 }}</td>
                             <td class="col-sm-1" style="text-align: center">
-                                <a href="{% url 'dd_delete' dd.id %}" style="color: red;"><i class="fa fa-trash-o fa-lg"></i></a> |
-                                <a href="{% url 'dd_detail' dd.id %}"><i class="fa fa-edit fa-lg"></i> </a>
+                                <a href="{% url 'dds:dd_delete' dd.id %}" style="color: red;"><i class="fa fa-trash-o fa-lg"></i></a> |
+                                <a href="{% url 'dds:dd_detail' dd.id %}"><i class="fa fa-edit fa-lg"></i> </a>
                             </td>
                         </tr>
                     {% endfor %}
