remove group worker to watch celery worker

--- a/ceeq/apps/core/templates/core/base.html
+++ b/ceeq/apps/core/templates/core/base.html
@@ -111,9 +111,9 @@
                             <li><a href="{% url 'usage:usage' %}"><i class="fa fa-table fa-fw"></i>Usage</a> </li>
                         {% endif %}
                         <li><a href="{% url 'help:guide' %}"><i class="fa fa-thumbs-o-up"></i> Help</a> </li>
-                        {% if user.username == 'sliu' %}
-                            <li><a href="{% url 'projects:projects' %}"><i class="fa fa-bar-chart-o"></i> OldProjects</a> </li>
-                        {% endif %}
+{#                        {% if user.username == 'sliu' %}#}
+{#                            <li><a href="{% url 'projects:projects' %}"><i class="fa fa-bar-chart-o"></i> OldProjects</a> </li>#}
+{#                        {% endif %}#}
 
                     </ul>
 
