--- a/ceeq/apps/core/templates/core/base.html
+++ b/ceeq/apps/core/templates/core/base.html
@@ -106,7 +106,7 @@
                 <div class="collapse navbar-collapse" id="main-navbar">
                     <ul class="nav navbar-nav">
                         <li><a href="{% url 'users:home' %}"><i class="fa fa-home"></i> Home </a></li>
-                        <li><a href="{% url 'queries:projects' %}"><i class="fa fa-bar-chart-o"></i>Queries</a></li>
+                        <li><a href="{% url 'queries:projects' %}"><i class="fa fa-bar-chart-o"></i>Projects</a></li>
                         {% if user.is_staff %}
                             <li><a href="{% url 'usage:usage' %}"><i class="fa fa-table fa-fw"></i>Usage</a> </li>
                         {% endif %}
