use modal for new project

--- a/ceeq/apps/queries/templates/queries/project_detail/project_detail.html
+++ b/ceeq/apps/queries/templates/queries/project_detail/project_detail.html
@@ -107,6 +107,9 @@
                         {% endif %}
                     </div>
                 </div>
+
+                {{ form }}
+
             {% else %}
                 <div class="row" style="margin-bottom: 10px;">
                     <div class="col-md-1"></div>
