--- a/ceeq/apps/queries/templates/queries/projects/projects.html
+++ b/ceeq/apps/queries/templates/queries/projects/projects.html
@@ -12,7 +12,7 @@
                 <div class="col-md-8">
                     <small>
                         {% if superuser %}
-                            <i class="fa fa-pencil fa=lg"></i> Create a <a href="{% url 'queries:project_new' %}"> New Project </a> &nbsp; | &nbsp;
+                            <i class="fa fa-pencil fa=lg"></i> Create a <a href="#" data-toggle="modal" data-target="#project-new-modal"> New Project </a> &nbsp; | &nbsp;
                             <i class="fa fa-cloud-upload fa-lg"></i><a href="{% url 'queries:query_jira_data_all' %}" id="query_jira_data"> Query JIRA Data</a> &nbsp; | &nbsp;
                             <i class="fa fa-refresh fa-lg"></i><a href="{% url 'calculator:calculate_score_all'  %}" id="calculate_score"> Calculate Score</a>
                         {% endif %}
@@ -148,6 +148,27 @@
         {% endif %}
     </div>
 </div>
+
+<div class="modal fade" id="project-new-modal">
+    <div class="modal-dialog">
+        <form action="{% url 'queries:project_new' %}" method="post">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">Project New Information</h4>
+                </div>
+                <div class="modal-body">
+                    {{ form }}
+                    {% csrf_token %}
+                </div>
+                <div class="modal-footer">
+                    <input id="project_new" class="btn btn-primary" type="submit" value="New Project">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                </div>
+            </div><!-- /.modal-content -->
+        </form>
+    </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
 
 
 {% block footer %}
